# Queryable-Shared-Reference-Repository

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  shutdown.sh  startup.sh
Data Pipeline/: config.yaml  requirements.txt  run.py
app/: USER_MANUAL.md  profile.sh  setup.sh  startup.sh
app/backend/: app.py  pyproject.toml
app/backend/data_processing/: __init__.py  chunk_visualization.py  data_ingestion.py
app/backend/data_processing/.ipynb_checkpoints/: data_ingestion-checkpoint.py
app/backend/models/: __init__.py  device.py  embedding.py  embedding_models.py  hallucination.py  hallucination_models.py  reranker.py  reranker_models.py
app/backend/models/.ipynb_checkpoints/: __init__-checkpoint.py  embedding-checkpoint.py  embedding_models-checkpoint.py  reranker_models-checkpoint.py
app/backend/orchestration/: __init__.py  llm.py  prompts.py  rag.py  react_test.py  state.py  tools.py
app/backend/retrieval/: __init__.py  retrieval.py  vector_store.py
app/backend/retrieval/.ipynb_checkpoints/: retrieval-checkpoint.py
app/backend/tests/: test_data_ingestion.py  test_load.py  test_models.py  test_orchestration.py  test_p95_latency.py  test_retrieval.py  test_vector_store.py
app/backend/utils/: logging_config.py
notebooks/: EDA_10_6.ipynb  EDA_9_30.ipynb  Embedding_Chunking_Visualizations.ipynb  Hallucination_Detection_Benchmarking.ipynb  Hallucination_Detection_Quant_Qual_Analysis.ipynb  Optimal_Context_Length_Context_Expansion.ipynb  Optimal_Context_Length_Inference.ipynb  Optimal_Context_Length_Validation.ipynb  Prompt_Thresholding_Inference.ipynb  Prompt_Thresholding_Validation.ipynb  RAG_Eval.ipynb  RAG_Inference.ipynb  Reranker_Impact.ipynb  ds_capstone_preprocess.ipynb  generation_model_survey.ipynb
results/: rag_eval_silver_answers.json
scripts/: embedding_chunking_benchmarking.py  embedding_chunking_benchmarking_docling.py  synthetic_data_generation.py  synthetic_data_generation_hallucination_eval.py
slurm_bash/: benchmark_embedding_chunking.bash  generate_synthetic_data.bash  run_vllm.sh
(+24 files in other folders)
