[project]
name = "queryable-shared-reference-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Data Manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    
    # Statistical Analysis
    "scipy>=1.10.0",
    
    # Jupyter & Interactivity
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    
    # Utility Libraries
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    
    # Data Sampling & Synthetic Data
    "imbalanced-learn>=0.11.0",
    "faker>=20.0.0",
    
    # NLP EDA
    "wordcloud>=1.9.0",
    "textstat>=0.7.3",
    "spacy>=3.7.0",
    
    # Image EDA
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    
    # Doc parsing
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.0.0",
    
    # DL Frameworks
    "transformers",
    # "torch",
    # "torchvision"
    
    # Hallucination Detection
    # "minicheck[llm] @ git+https://github.com/Liyan06/MiniCheck.git@main",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]