[project]
name = "qsrr-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "aiosqlite>=0.20.0",
    "filelock>=3.0.0",
    "chromadb>=0.5.0",
    "bm25s>=0.2.0",
    "PyStemmer>=2.0.0",
    "docling>=2.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "pytest>=8.0.0",
]
